fix whitespace on right in smaller devices
This fixes the white space issue in the right and
as well as improving the responsiveness in smaller
devices.

--- a/style.css
+++ b/style.css
@@ -98,6 +98,12 @@
     outline: none;
 }
 
+.flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .form-button {
     text-align: center;
 }
@@ -134,13 +140,17 @@
 
 @media (max-width: 900px) {
 
+    html,body {
+        overflow-x: hidden;
+    }
+    
     .wrapper {
         display: block;
     }
 
     .left-content,
     .right-content {
-        padding: 0;
+        padding: 2em;
     }
 
     .right-content h3 {
@@ -151,5 +161,5 @@
     .right {
         width: 100%;
     }
-  }
+}
 
